--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -7,6 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>rjicon.ico</ApplicationIcon>
+    <FileVersion>1.0.0.2</FileVersion>
+    <AssemblyVersion>1.0.0.2</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,8 +19,8 @@
     <ProjectReference Include="..\RussJudge.AutoApplicationUpdater\RussJudge.AutoApplicationUpdater.csproj" />
   </ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="$(SolutionDir)VersionBump\bin\Debug\net8.0\VersionBump.exe $(ProjectFileName)" />
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="$(SolutionDir)RussJudge.AutoApplicationUpdater\lib\VersionBump.exe $(ProjectFileName)" />
   </Target>
 
 </Project>
