--- a/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
+++ b/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <ApplicationIcon>rjicon.ico</ApplicationIcon>
@@ -11,15 +11,64 @@
     <Copyright>Copyright (c) 2024 $(Authors)</Copyright>
     <PackageIcon>rjicon2.png</PackageIcon>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <FileVersion>1.0.0.4</FileVersion>
-    <AssemblyVersion>1.0.0.4</AssemblyVersion>
+    <FileVersion>1.0.0.53</FileVersion>
+    <AssemblyVersion>1.0.0.53</AssemblyVersion>
+    <Title>RussJudge.AutoApplicationUpdater</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/russjudge/RussJudge.AutoApplicationUpdater</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>This provides a simplified mechanism for providing self-update check and install of any application that uses a Microsoft Setup Installer (.msi).</Description>
+    <PackageProjectUrl>https://russjudge.com</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="lib\ManifestBuilder.deps.json" />
+    <None Remove="lib\ManifestBuilder.dll" />
+    <None Remove="lib\ManifestBuilder.exe" />
+    <None Remove="lib\ManifestBuilder.pdb" />
+    <None Remove="lib\netcore\ManifestBuilder.runtimeconfig.json" />
+    <None Remove="lib\VersionBump.deps.json" />
+    <None Remove="lib\VersionBump.dll" />
+    <None Remove="lib\VersionBump.exe" />
+    <None Remove="lib\VersionBump.pdb" />
+    <None Remove="lib\VersionBump.runtimeconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="lib\netcore\ManifestBuilder.deps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\ManifestBuilder.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\ManifestBuilder.runtimeconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\VersionBump.deps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\VersionBump.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\VersionBump.runtimeconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="rjicon.ico" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="lib\netcore\ManifestBuilder.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\netcore\ManifestBuilder.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\netcore\VersionBump.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="lib\netcore\VersionBump.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="rjicon2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -27,11 +76,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="lib\" />
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="$(ProjectDir)lib\VersionBump.exe $(ProjectFileName)" />
+    <Exec Command="$(ProjectDir)lib\netcore\VersionBump.exe $(ProjectFileName)" />
   </Target>
 
 </Project>
