--- a/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
+++ b/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
@@ -11,16 +11,17 @@
     <Copyright>Copyright (c) 2024 $(Authors)</Copyright>
     <PackageIcon>rjicon2.png</PackageIcon>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <FileVersion>1.0.0.79</FileVersion>
-    <AssemblyVersion>1.0.0.79</AssemblyVersion>
+    <FileVersion>1.0.1.83</FileVersion>
+    <AssemblyVersion>1.0.1.83</AssemblyVersion>
     <Title>RussJudge.AutoApplicationUpdater</Title>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/russjudge/RussJudge.AutoApplicationUpdater</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>This provides a simplified mechanism for providing self-update check and install of any application that uses a Microsoft Setup Installer (.msi).</Description>
     <PackageProjectUrl>https://russjudge.com</PackageProjectUrl>
-    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageReleaseNotes>VersionBump and ManifestBuilder executables did not get included in original Nuget package.</PackageReleaseNotes>
     <PackageTags>Update; automatic update; self update; updater</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,7 +29,11 @@
     <None Remove="lib\ManifestBuilder.dll" />
     <None Remove="lib\ManifestBuilder.exe" />
     <None Remove="lib\ManifestBuilder.pdb" />
+    <None Remove="lib\netcore\ManifestBuilder.dll" />
+    <None Remove="lib\netcore\ManifestBuilder.exe" />
     <None Remove="lib\netcore\ManifestBuilder.runtimeconfig.json" />
+    <None Remove="lib\netcore\VersionBump.dll" />
+    <None Remove="lib\netcore\VersionBump.exe" />
     <None Remove="lib\VersionBump.deps.json" />
     <None Remove="lib\VersionBump.dll" />
     <None Remove="lib\VersionBump.exe" />
@@ -40,6 +45,12 @@
     <Content Include="lib\netcore\ManifestBuilder.deps.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\netcore\ManifestBuilder.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\ManifestBuilder.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="lib\netcore\ManifestBuilder.pdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -47,6 +58,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="lib\netcore\VersionBump.deps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\VersionBump.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\netcore\VersionBump.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="lib\netcore\VersionBump.pdb">
@@ -59,18 +76,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="lib\netcore\ManifestBuilder.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\netcore\ManifestBuilder.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\netcore\VersionBump.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\netcore\VersionBump.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="rjicon2.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
