--- a/ManifestBuilder/ManifestBuilder.csproj
+++ b/ManifestBuilder/ManifestBuilder.csproj
@@ -6,8 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <ApplicationIcon>rjicon.ico</ApplicationIcon>
-    <FileVersion>1.0.0.19</FileVersion>
-    <AssemblyVersion>1.0.0.19</AssemblyVersion>
+    <FileVersion>1.0.0.21</FileVersion>
+    <AssemblyVersion>1.0.0.21</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="XCOPY $(OutDir)*.* $(SolutionDir)RussJudge.AutoApplicationUpdater\lib\netcore /Y&#xD;&#xA;$(SolutionDir)RussJudge.AutoApplicationUpdater\lib\netcore\VersionBump.exe $(ProjectFileName)" />
+    <Exec Command="XCOPY $(OutDir)*.* $(SolutionDir)RussJudge.AutoApplicationUpdater\content /Y&#xD;&#xA;$(SolutionDir)RussJudge.AutoApplicationUpdater\content\VersionBump.exe $(ProjectFileName)" />
   </Target>
 
 </Project>
