--- a/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
+++ b/RussJudge.AutoApplicationUpdater/RussJudge.AutoApplicationUpdater.csproj
@@ -11,17 +11,17 @@
     <Copyright>Copyright (c) 2024 $(Authors)</Copyright>
     <PackageIcon>rjicon2.png</PackageIcon>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <FileVersion>1.0.3.90</FileVersion>
-    <AssemblyVersion>1.0.3.90</AssemblyVersion>
+    <FileVersion>1.0.4.95</FileVersion>
+    <AssemblyVersion>1.0.4.95</AssemblyVersion>
     <Title>RussJudge.AutoApplicationUpdater</Title>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/russjudge/RussJudge.AutoApplicationUpdater</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>This provides a simplified mechanism for providing self-update check and install of any application that uses a Microsoft Setup Installer (.msi).</Description>
     <PackageProjectUrl>https://russjudge.com</PackageProjectUrl>
-    <PackageReleaseNotes>VersionBump and ManifestBuilder executables did not get included in original Nuget package.</PackageReleaseNotes>
+    <PackageReleaseNotes>Bug fix on the Update Process.  If update process would fail if installer package was not a compressed file.  EXE, MSI, and APK will now function.</PackageReleaseNotes>
     <PackageTags>Update; automatic update; self update; updater</PackageTags>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
